--- a/HttpGetPost/app/build.gradle
+++ b/HttpGetPost/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
-        applicationId "com.example.okhttp"
+        applicationId "com.example.httpgetpost"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
@@ -17,6 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary'org.apache.http.legacy'
 }
 
 dependencies {
@@ -26,5 +27,4 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
