--- a/HttpGetPost/app/src/main/AndroidManifest.xml
+++ b/HttpGetPost/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.okhttp">
+    package="com.example.httpgetpost">
 
     <application
         android:allowBackup="true"
@@ -17,6 +17,6 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
 </manifest>
